--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,8 @@
-# core.Microsoft*
-# core.mongo*
-# core.python*
-# env.py
-# __pycache__/
-# *.py[cod]
-# node_modules/
+core.Microsoft*
+core.mongo*
+core.python*
+env.py
+__pycache__/
+*.py[cod]
+node_modules/
+notes.txt
